updated with dark mode cursor design fixed

--- a/style.css
+++ b/style.css
@@ -513,7 +513,7 @@ form textarea {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional: Add a little shadow for better visibility */
 }
 
-/* custom cursor design */
+/* custom cursor design for light mode */
 .cursor {
   width: 50px;
   height: 50px;
@@ -539,6 +539,17 @@ form textarea {
   pointer-events: none;
   transition: width .3s, height .3s, opacity .3s;
   z-index: 9999;
+}
+
+/* for dark mode */
+/* Styles for dark mode */
+body.active .cursor {
+  border-color: white;
+}
+
+body.active .cursor2 {
+  background-color: white;
+  opacity: .7; /* Increased opacity for better visibility */
 }
 
 .hover {
